--- a/app/crud/templates/create.html
+++ b/app/crud/templates/create.html
@@ -8,16 +8,26 @@
 </head>
 
 <body>
-    <h1> Create User </h1>
+    <h1> Create Travel </h1>
 
-    <form action="{% url 'save' %}" method="POST">
+    <form action="{% url 'createTravel' %}" method="POST">
         {% csrf_token %}
-        <input type="text" name="name">
-        <input type="number" name="value">
-        <input type="date" name="dateLeave">
-        <input type="date" name="dateCome">
-        <button type="submit">Save</button>
+
+        Name: <input type="text" name="name" required>
+        <br>
+        Value: <input type="number" name="value" required>
+        <br>
+        Date Leave: <input type="date" name="dateLeave" required>
+        <br>
+        Date Come: <input type="date" name="dateCome" required>
+        <br>
+        Destiny: <input type="text" name="destiny" required>
+        <br>
+        <button type="submit">Create</button>
     </form>
+    <a href="{% url 'home' %}">
+        <button>Home</button>
+    </a>
 </body>
 
 </html>
